# offline-pki

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
scripts/: pki  resize
src/pki/: __main__.py  certificate.py  dependencies.py  yubikey.py
